# spice-gtk-gm

./: .editorconfig  .gitlab-ci.yml  CHANGELOG.md  meson.build  meson_options.txt
build-aux/: setcap-or-suid
doc/reference/: meson.build  spice-gtk-sections.txt
man/: meson.build
po/: LINGUAS  cs.po  de.po  fr.po  it.po  ru.po
src/: bio-gio.c  bio-gio.h  cd-scsi-dev-params.h  cd-scsi.c  cd-scsi.h  cd-usb-bulk-msd.c  cd-usb-bulk-msd.h  channel-base.c  channel-cursor.c  channel-display-gst.c  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-inputs.c  channel-main.c  channel-main.h  channel-playback-priv.h  channel-playback.c  channel-port.c  channel-record.c  channel-smartcard.c  channel-usbredir-priv.h  channel-usbredir.c  channel-webdav.c  client_sw_canvas.c  client_sw_canvas.h  continuation.c  continuation.h  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  coroutine_winfibers.c  decode-glz.c  decode-jpeg.c  decode-zlib.c  decode.h  desktop-integration.c  desktop-integration.h  gio-coroutine.c  gio-coroutine.h  (+64 more)
tests/: cd-emu.c  coroutine.c  meson.build
tools/: spice-cmdline.c  spicy-connect.c  spicy.c
